Letter spacing fix in price line

--- a/themes/jms_delphinus/css/product.css
+++ b/themes/jms_delphinus/css/product.css
@@ -32,7 +32,7 @@
     border-top: 2px solid #f6f6f6;
     color: #000;
     font-size: 24px;
-    letter-spacing: 0.075em;
+    /* letter-spacing: 0.075em; */
     line-height: 48px;
     margin-top: 15px;
 }
